# antics

./: README.md  antics.cabal
app/: Main.hs
